Fix error when proyect name contains a white space, some styling fixes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -675,12 +675,9 @@ div.container-panel-mini {
 }
 
 .container-colors-active{
-    display: block;
+    display: grid;
     position: absolute;
-    background-color: transparent;
-    height: 240px;
-    width: 160px;
-    
+    background-color:var(--accent-color-one);
 }
 
 .option-color-container {
@@ -717,6 +714,17 @@ div#projects-container{
     display: relative;
     width: 100%;
     height: 20px;
+    box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.5);
+}
+
+.project-element button {
+    background-color: transparent;
+    border: none;
+}
+
+.project-element button:hover{
+    
+    background-color: rgba(65, 65, 65, 0.4);
 }
 
 i.edit-project-icon{
@@ -842,6 +850,7 @@ li.project-element div.project-name{
     flex: 0 1 100%;
     font-size: 16px; 
     pointer-events: none;
+    padding-block: .5rem;
 }
 
 form.form-projects label.title-project{
